refactor: add example styles

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kalendář rybáře</title>
+    <link rel="stylesheet" href="example.css">
 </head>
 <body>
     <div id="fish-calendar" data-url="https://raw.githubusercontent.com/alesvojta/fish-calendar/master/src/db.json"></div>
